# tauri

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.changes/: acl-identifier-error-context.md  add-is-always-on-top.md  android-escape-product-name.md  appimage-diricon.md  bundle-vc-runtime.md  bundler-appimage-arch-env.md  capability-dev-only.md  change-pr-12884.md  change-pr-13288.md  change-pr-15117.md  change-pr-15262.md  cli-bundles-updater.md  cli-multiple-config.md  cli-required-features-src-bin.md  clone-ExitRequestApi.md  config.json  cookies-for-url.md  cookies_for_url-deadlock.md  data-tauri-drag-region-deep.md  datastore_api.md  eval-with-callback.md  expose-mobile-monitor-apis.md  feat-async_runtime-track.md  feat-webview-auto-resize.md  fix-bun-lockfile.md  fix-custom-signer-uninstaller.md  fix-dpi-leak-hdc.md  fix-frontenddir-target-error.md  fix-get-asset-no-leading-slash.md  fix-ios-bun-1.2.md  fix-ios-metal-toolchain.md  fix-ios-register-listener.md  fix-path-join-error.md  fix-prevent-overflow-monitor-check.md  fix-tray-get-by-id.md  fix-webview-proxy-url.md  fix-window-menu-nsapp-command.md  fix-wix-registry-search-order.md  fix-zoom.md  introduce-run-return.md  (+34 more)
.github/: CONTRIBUTING.md
.github/workflows/: audit.yml  bench.yml  check-change-tags.yml  check-generated-files.yml  check-license-header.yml  covector-status.yml  covector-version-or-publish-v1.yml  covector-version-or-publish.yml  docker.yml  lint-cli.yml  lint-core.yml  lint-js.yml  publish-cli-js.yml  publish-cli-rs.yml  test-android.yml  test-cli-js.yml  test-cli-rs.yml  test-core.yml  test-lint-bundler.yml  test-updater-artifacts.yml  udeps.yml
.scripts/ci/: check-license-header.js
bench/: Cargo.toml
bench/src/: build_benchmark_jsons.rs  run_benchmark.rs  utils.rs
core/tauri/: CHANGELOG.md
core/tauri-build/src/: lib.rs
core/tauri-codegen/: Cargo.toml
core/tauri-utils/: Cargo.toml
core/tauri-utils/src/: mime_type.rs
crates/tauri/: CHANGELOG.md  Cargo.toml  build.rs
crates/tauri-build/: CHANGELOG.md  Cargo.toml
crates/tauri-build/src/: acl.rs  lib.rs
crates/tauri-bundler/: CHANGELOG.md  Cargo.toml
crates/tauri-bundler/src/: bundle.rs  error.rs
crates/tauri-cli/: CHANGELOG.md  Cargo.toml  ENVIRONMENT_VARIABLES.md  config.schema.json  metadata-v2.json  schema.json  tauri.config.schema.json
crates/tauri-codegen/: CHANGELOG.md  Cargo.toml
crates/tauri-driver/: Cargo.toml
crates/tauri-macos-sign/: CHANGELOG.md  Cargo.toml
crates/tauri-macros/: CHANGELOG.md  Cargo.toml
crates/tauri-plugin/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime-cef/: Cargo.toml
crates/tauri-runtime-cef/src/: cef_impl.rs  lib.rs
crates/tauri-runtime-cef/src/cef_impl/: request_handler.rs  utils.rs
crates/tauri-runtime-wry/: CHANGELOG.md  Cargo.toml
crates/tauri-runtime/src/: lib.rs  webview.rs  window.rs
crates/tauri-schema-worker/: package.json
crates/tauri-utils/: CHANGELOG.md  Cargo.toml
crates/tauri/src/: app.rs  (+1 more)
examples/api/: README.md  package.json  vite.config.js
examples/helloworld/: main.rs
examples/streaming/: main.rs
tooling/api/: package.json
tooling/cli/: metadata.json
(+155 files in other folders)
